--- a/Track.html
+++ b/Track.html
@@ -46,29 +46,29 @@
                          <img src="assets/images/logo-122x122.png" alt="PMCC 4th Watch Sydney" title="Pentecostal Missionary of Christ(4th Watch) Sydney" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://mobirise.com">PMCC 4th Watch Sydney</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="http://www.pmcc4w.org">PMCC 4th Watch Sydney</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://mobirise.com">
+                    <a class="nav-link link text-white display-4" href="http://www.pmcc4w.org" target="_blank">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>
                         Services
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://mobirise.com">
+                    <a class="nav-link link text-white display-4" href="http://www.pmcc4w.org" target="_blank">
                         <span class="mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         About Us
                     </a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://mobirise.com">
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="http://www.pmcc4w.org" target="_blank">
                     <span class="mbri-save mbr-iconfont mbr-iconfont-btn "><br></span></a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="features8 cid-rdUviOFUpe mbr-parallax-background" id="features8-4">
+<section class="engine"><a href="https://mobirise.info/i">web creation software</a></section><section class="features8 cid-rdUviOFUpe mbr-parallax-background" id="features8-4">
 
     
 
@@ -80,7 +80,7 @@
 
             <div class="card  col-12 col-md-6 col-lg-4">
                 <div class="card-img">
-                    <span class="mbr-iconfont socicon-twitter socicon" style="font-size: 100px;"></span>
+                    <span class="mbr-iconfont mbri-users" style="font-size: 100px;"></span>
                 </div>
                 <div class="card-box align-center">
                     <h4 class="card-title mbr-fonts-style display-7"><strong>WE SHARE THE LOVE OF GOD</strong></h4>
@@ -88,7 +88,7 @@
 <br>For God so loved the world that he gave his one and only Son, that whoever believes in him shall not perish but have eternal life.
 <br>For God did not send his Son into the world to condemn the world, but to save the world through him.
 <br></p>
-                    <div class="mbr-section-btn text-center"><a href="https://mobirise.co" class="btn btn-secondary display-4">Read More</a></div>
+                    <div class="mbr-section-btn text-center"><a href="http://www.pmcc4w.org" class="btn btn-secondary display-4" target="_blank">Read More</a></div>
                 </div>
             </div>
 
@@ -101,7 +101,7 @@
                         CHURCH SERVICES SCHEDULE</strong></h4>
                     <p class="mbr-text mbr-fonts-style display-7">
                        Daily morning Prayer &amp; Devotion Start @ 5a.m. to 7a.m.<br>Tuesday Bible Study @ 6pm-8pm<br>Thursday @ 6pm-8pm<br>Sunday Worship @ 9:30am-12noon<br><br>Please attend &amp; be Blessed by the WORD of GOD.</p>
-                    <div class="mbr-section-btn text-center"><a href="https://mobirise.co" class="btn btn-secondary display-4">Read More
+                    <div class="mbr-section-btn text-center"><a href="http://www.pmcc4w.org" class="btn btn-secondary display-4" target="_blank">Read More
                         </a></div>
                 </div>
             </div>
@@ -112,8 +112,8 @@
                 </div>
                 <div class="card-box align-center">
                     <h4 class="card-title mbr-fonts-style display-7"><strong>CONTACT US</strong></h4>
-                    <p class="mbr-text mbr-fonts-style display-7">Pls. do not hesitate to call us:<br>SYDNEY LOCALE<br>Pastor Olivia Liamzon <br>0410494283<br><br>CANBERRA EXTENSION<br>Pastor Daniel Zonio <br>0405464186 | 0414081162</p>
-                    <div class="mbr-section-btn text-center"><a href="https://mobirise.co" class="btn btn-secondary display-4">Read More
+                    <p class="mbr-text mbr-fonts-style display-7">Pls. do not hesitate to call us:<br>SYDNEY LOCALE<br><br><br>CANBERRA EXTENSION<br><br></p>
+                    <div class="mbr-section-btn text-center"><a href="http://www.pmcc4w.org" class="btn btn-secondary display-4" target="_blank">Read More
                         </a></div>
                 </div>
             </div>
@@ -156,7 +156,7 @@
                     <div data-form-alert="" hidden="" class="align-center">Thanks for filling out the form!</div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="ngMsHB70Engk0uWmbVEbQNd/8rc9+YRh7D/LZ9cszylN0F/9oTKJF18mtwOkwQzA/q6ylZ2fq2YABLIhxc8Dv0PxObSy7N79meoDaVof1/iIYSuUg6QPZNf17Sq3exZl" data-form-email="true">
+                        <input type="hidden" value="a8mL/2FE1llIdJOKll0fO0dWwOLM/aAWivNIUohyODruMAXcA1J5zAqcWW2adDUbQ7R+YOCu0dkgvPxc2JVvmrI8BeMUacCF9lNcAILISGbFcuzhdwGIJMnTrtVF0OHR" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="THANK YOU SO MUCH" id="email-footer4-8">
                         </div>
