--- a/Endtime.html
+++ b/Endtime.html
@@ -15,9 +15,9 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/gdpr-plugin/gdpr-styles.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/animatecss/animate.min.css">
+  <link rel="stylesheet" href="assets/gdpr-plugin/gdpr-styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
@@ -54,7 +54,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="mbr-section content5 cid-rfuVE82YKZ" id="content5-f">
+<section class="engine"><a href="https://mobirise.info/c">free site builder</a></section><section class="mbr-section content5 cid-rfuVE82YKZ" id="content5-f">
 
     
 
@@ -208,12 +208,12 @@
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+  <script src="assets/cookies-alert-plugin/cookies-alert-core.js"></script>
+  <script src="assets/cookies-alert-plugin/cookies-alert-script.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/sociallikes/social-likes.js"></script>
-  <script src="assets/cookies-alert-plugin/cookies-alert-core.js"></script>
-  <script src="assets/cookies-alert-plugin/cookies-alert-script.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
