--- a/flyers.html
+++ b/flyers.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="mbr-gallery mbr-slider-carousel cid-rmUheU4GWY" id="gallery2-c">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="mbr-gallery mbr-slider-carousel cid-rmUheU4GWY" id="gallery2-c">
 
     
 
@@ -152,7 +152,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="p6pHxiMTSNVrdJaaj3Mg+lQSO3PSoAWe3nfZDAlQ5sA4GNPY7Rm9Eh7EalbNRDDkOgoKXC/MPNZzjJ9GCM2zN0gSuBVs23d11iqkcIcQlIIfwsY3539PSIjOkhQi5bPP">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="rxsGr+tnG5934HFmy5eyIkSABZwPJ5B6TSTtOu3ddXK0cGtkYA6MvvIWdxSsaWbpIM1l+qsp5U0ftSl5ZDTLSEmr+R4PqdedLPw0uDC8SCXAn4V3gkMc1cd8KxaWVAMx">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
